<?xml version="1.0"?>
<package format="3">
  <name>tb4_kostal_gui</name>
  <version>0.1.0</version>
  <description>The tb4_kostal_gui package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tb4_kostal_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>irobot_create_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>Qt5 COMPONENTS Core Widgets</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_default_plugins</build_depend>
  <build_depend>rviz_rendering</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tb4_kostal_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>rviz_rendering</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
